<resources>
    <string name="app_name">DiningRoomOrder</string>
    <string name="action_settings">Settings</string>
    <string name="host">http://kolvin.cn</string>
    <string name="login_addr">/Home/Login</string>
    <string name="mymeal_addr">/UserMeal/GetMyMeal</string>
    <string name="meal_addr">/Meal/GetMealByDateAndType</string>
    <string name="meal_name">菜名</string>
    <string name="meal_cost">单价</string>
    <string name="meal_count">份数</string>
    <string name="meal_type">时段</string>
    <string name="meal_breakfast">早餐</string>
    <string name="meal_pre">上一日</string>
    <string name="meal_next">下一日</string>
    <string name="meal_launch">午餐</string>
    <string name="meal_dinner">晚餐</string>
    <string name="meal_nightsnake">宵夜</string>
    <string name="meal_defaultname">茶叶蛋</string>
    <string name="meal_defaultcost">￥2</string>
    <string name="meal_defaultcount">0</string>
    <string name="meal_default_total_cost">总价￥10</string>
    <string name="meal_default_date">2016年5月1日(星期天)</string>
    <string name="select_meal_count_text">选择份数</string>
    <string name="number_picker_confrim_text">确定</string>
    <string name="number_picker_cancel_text">取消</string>
</resources>
