<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/meal_defaultname"
        android:textAlignment="center"
        android:id="@+id/itemView_name"
        android:textIsSelectable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/meal_defaultcost"
        android:textAlignment="center"
        android:id="@+id/itemView_cost"
        android:textIsSelectable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/meal_defaultcount"
        android:textAlignment="center"
        android:id="@+id/itemView_count"
        android:textIsSelectable="false" />

</LinearLayout>
